syntax = "proto3";

package auth.v1;

import "google/protobuf/timestamp.proto";

message VerificationCodeField {
  int64 no_of_times_code_sent = 1;
  google.protobuf.Timestamp last_code_sent_at = 2;
  google.protobuf.Timestamp can_resend_after = 3;
  int64 incorrect_verification_attempts = 4;
  int64 remaining_verification_attempts = 5;
  bool is_verified = 6;
  optional string error_message = 7;
}

message VerificationField {
  bool is_verified = 1;
  optional string error_message = 2;
  int64 remaining_verification_attempts = 3;
  int64 incorrect_verification_attempts = 4;
}

message ValueField {
  string value = 1;
  bool is_valid = 2;
  optional string error_message = 3;
}

message PasswordField {
  bool is_valid = 1;
  optional string error_message = 2;
}
